--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 annotated-types==0.7.0
 anyio==4.7.0
+boto3==1.35.76
+botocore==1.35.76
 Brotli==1.1.0
 certifi==2024.8.30
 cffi==1.17.1
@@ -11,6 +13,7 @@ fastapi==0.115.6
 fonttools==4.55.2
 h11==0.14.0
 idna==3.10
+jmespath==1.0.1
 pdfkit==1.0.0
 pillow==10.4.0
 pycparser==2.22
@@ -18,7 +21,11 @@ pydantic==2.10.3
 pydantic_core==2.27.1
 pydyf==0.11.0
 pyphen==0.15.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 requests==2.32.3
+s3transfer==0.10.4
+six==1.17.0
 sniffio==1.3.1
 starlette==0.41.3
 tinycss2==1.4.0
