--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - "8000:8000"
     volumes:
       - .:/app
+      - ./app.log:/app/app.log
     env_file:
       - .env
     restart: unless-stopped 
