--- a/.gitignore
+++ b/.gitignore
@@ -84,5 +84,6 @@ docker/
 
 # Folder upload file
 import_ftp/*
-# generated_htmls/*
-# generated_pdfs/*
+generated_htmls/*
+generated_pdfs/*
+app.log
