--- a/requirements.txt
+++ b/requirements.txt
@@ -8,31 +8,54 @@ cffi==1.17.1
 charset-normalizer==3.4.0
 click==8.1.7
 cssselect2==0.7.0
+dnspython==2.8.0
+email-validator==2.3.0
 exceptiongroup==1.2.2
 fastapi==0.115.6
+fastapi-cli==0.0.13
+fastapi-cloud-cli==0.3.0
 fonttools==4.55.2
-h11==0.14.0
+h11==0.16.0
+httpcore==1.0.9
+httptools==0.6.4
+httpx==0.28.1
 idna==3.10
+Jinja2==3.1.6
 jmespath==1.0.1
+markdown-it-py==4.0.0
+MarkupSafe==3.0.3
+mdurl==0.1.2
 pdfkit==1.0.0
 pillow==10.4.0
 pycparser==2.22
 pydantic==2.10.3
 pydantic_core==2.27.1
 pydyf==0.11.0
+Pygments==2.19.2
 pyphen==0.15.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+python-multipart==0.0.20
+PyYAML==6.0.3
 requests==2.32.3
+rich==14.1.0
+rich-toolkit==0.15.1
+rignore==0.7.0
 s3transfer==0.10.4
+sentry-sdk==2.39.0
+shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
 starlette==0.41.3
 tinycss2==1.4.0
 tinyhtml5==2.0.0
+typer==0.19.2
 typing_extensions==4.12.2
 urllib3==2.2.3
 uvicorn==0.32.1
+uvloop==0.21.0
+watchfiles==1.1.0
 weasyprint==63.0
 webencodings==0.5.1
+websockets==15.0.1
 zopfli==0.2.3.post1
